--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  EC2_PUBLIC_IP: 15.188.76.12 # TODO replace to your EC2 instance public IP
+  EC2_PUBLIC_IP: 15.188.76.12
 
 jobs:
   PolybotBuild:
