service-deploy.yaml-commit4

--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -22,8 +22,8 @@ jobs:
         run: |
           cd polybot
           IMAGE_NAME=polybot:${{ github.run_number }}
-          docker build -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
+          docker-compose build -t $IMAGE_NAME .
+          docker-compose push $IMAGE_NAME
 
   Yolo5Build:
     runs-on: ubuntu-latest
@@ -38,8 +38,8 @@ jobs:
         run: |
           cd yolo5
           IMAGE_NAME=yolo5:${{ github.run_number }}
-          docker build -t $IMAGE_NAME .
-          docker push $IMAGE_NAME
+          docker-compose build -t $IMAGE_NAME .
+          docker-compose push $IMAGE_NAME
 
   Deploy:
     name: Deploy Docker compose project
@@ -86,7 +86,7 @@ jobs:
             YOLO5_IMG_NAME=yolo5:${{ github.run_number }}
             TELEGRAM_APP_URL=$NGROK_DOMAIN
             """ > .env
-            docker compose down
-            docker compose up -d
+            docker-compose compose down
+            docker-compose compose up -d
             sleep 10 # Wait for MongoDB containers to be ready
             ./init-mongo.sh
