service-deploy.yaml-commit5

--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -86,7 +86,7 @@ jobs:
             YOLO5_IMG_NAME=yolo5:${{ github.run_number }}
             TELEGRAM_APP_URL=$NGROK_DOMAIN
             """ > .env
-            docker-compose compose down
-            docker-compose compose up -d
+            docker-compose down
+            docker-compose up -d
             sleep 10 # Wait for MongoDB containers to be ready
             ./init-mongo.sh
