--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -22,8 +22,8 @@ jobs:
         run: |
           cd polybot
           IMAGE_NAME=polybot:${{ github.run_number }}
-          docker-compose build -t $IMAGE_NAME .
-          docker-compose push $IMAGE_NAME
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
 
   Yolo5Build:
     runs-on: ubuntu-latest
@@ -38,8 +38,8 @@ jobs:
         run: |
           cd yolo5
           IMAGE_NAME=yolo5:${{ github.run_number }}
-          docker-compose build -t $IMAGE_NAME .
-          docker-compose push $IMAGE_NAME
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
 
   Deploy:
     name: Deploy Docker compose project
@@ -77,7 +77,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            sudo apt update && sudo apt install -y jq docker-compose
+            sudo apt update && sudo apt install -y jq docker-compose-plugin
             cd PolybotService/
             echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
             NGROK_DOMAIN=$(curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
