--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -50,7 +50,7 @@ jobs:
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
   Deploy:
-    name: Deploy Docker compose project
+    name: Deploy Docker Compose Project
     runs-on: ubuntu-latest
     needs:
       - PolybotBuild
@@ -60,50 +60,40 @@ jobs:
       - name: Checkout the repo code
         uses: actions/checkout@v2
 
-      - name: Copy Compose files to the EC2
-        uses: appleboy/scp-action@master
+      - name: Copy Compose Files to the EC2
+        uses: appleboy/scp-action@v0.1.0
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          source: docker-compose.yml
+          source: |
+            docker-compose.yml
+            init-mongo.sh
           target: /home/ubuntu/projects/DockerProject-bennyi/
 
-      - name: Copy MongoDB init script to the EC2
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ env.EC2_PUBLIC_IP }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          source: init-mongo.sh
-          target: /home/ubuntu/projects/DockerProject-bennyi/
-
-      - name: Check copied files on EC2
-        uses: appleboy/ssh-action@master
+      - name: Check Copied Files on EC2
+        uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            ls -l
             ls -l /home/ubuntu/projects/DockerProject-bennyi/
 
-      - name: Update the Docker Compose project in the EC2
-        uses: appleboy/ssh-action@master
+      - name: Update the Docker Compose Project in the EC2
+        uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
-            sudo apt update && sudo apt install -y jq docker-compose-plugin
-            cd /home/ubuntu/projects/DockerProject-bennyi/polybot
+            sudo apt update && sudo apt install -y jq docker-compose
+            cd /home/ubuntu/projects/DockerProject-bennyi
             echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
             NGROK_DOMAIN=$(curl -s localhost:8443/api/tunnels | jq -r '.tunnels[0].public_url')
-            echo """
-            POLYBOT_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
+            echo "POLYBOT_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
             YOLO5_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
-            TELEGRAM_APP_URL=$NGROK_DOMAIN
-            """ > .env
+            TELEGRAM_APP_URL=$NGROK_DOMAIN" > .env
             docker-compose down
             docker-compose up -d
             sleep 10 # Wait for MongoDB containers to be ready
