--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout the repo code
         uses: actions/checkout@v2
 
+      - name: List files in workspace
+        run: |
+          ls -R
+
       - name: Log in to DockerHub
         run: |
           echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
@@ -34,6 +38,10 @@ jobs:
     steps:
       - name: Checkout the repo code
         uses: actions/checkout@v2
+
+      - name: List files in workspace
+        run: |
+          ls -R
 
       - name: Log in to DockerHub
         run: |
@@ -59,6 +67,10 @@ jobs:
     steps:
       - name: Checkout the repo code
         uses: actions/checkout@v2
+
+      - name: List files in workspace
+        run: |
+          ls -R
 
       - name: Copy Compose files to the EC2
         uses: appleboy/scp-action@master
