--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -75,16 +75,16 @@ jobs:
           echo "Listing files in the workspace:"
           ls -R
 
-      - name: Copy Compose files to the EC2
+      - name: Copy Docker Compose file to EC2
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          source: docker-compose.yml
+          source: docker-compose.yaml
           target: /home/ubuntu/projects/DockerProject-bennyi/
 
-      - name: Copy MongoDB init script to the EC2
+      - name: Copy MongoDB init script to EC2
         uses: appleboy/scp-action@master
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
@@ -102,7 +102,7 @@ jobs:
           script: |
             ls -l /home/ubuntu/projects/DockerProject-bennyi/
 
-      - name: Update the Docker Compose project in the EC2
+      - name: Update Docker Compose project on EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.EC2_PUBLIC_IP }}
@@ -120,4 +120,5 @@ jobs:
             """ > .env
             docker-compose down
             docker-compose up -d
-            sleep 10 # 
+            sleep 10 # Wait for MongoDB containers to be ready
+            ./init-mongo.sh
