--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -1,65 +1,126 @@
-Deploy:
-  name: Deploy Docker compose project
-  runs-on: ubuntu-latest
-  needs:
-    - PolybotBuild
-    - Yolo5Build
+name: Polybot Service Deployment
 
-  steps:
-    - name: Checkout the repo code
-      uses: actions/checkout@v2
+on:
+  push:
+    branches:
+      - main
 
-    - name: List files in workspace
-      run: |
-        echo "Listing files in the workspace:"
-        ls -R
+env:
+  EC2_PUBLIC_IP: 35.180.191.125
 
-    - name: Copy Docker Compose file to EC2
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ env.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        source: docker-compose.yaml
-        target: /home/ubuntu/projects/DockerProject-bennyi/
-        debug: true
+jobs:
+  PolybotBuild:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repo code
+        uses: actions/checkout@v2
 
-    - name: Copy MongoDB init script to EC2
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ env.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        source: init-mongo.sh
-        target: /home/ubuntu/projects/DockerProject-bennyi/
-        debug: true
+      - name: List files in workspace
+        run: |
+          echo "Listing files in the workspace:"
+          ls -R
 
-    - name: Check copied files on EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ env.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        script: |
-          ls -l /home/ubuntu/projects/DockerProject-bennyi/
+      - name: Log in to DockerHub
+        run: |
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-    - name: Update Docker Compose project on EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ env.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        script: |
-          sudo apt update && sudo apt install -y jq docker-compose-plugin
-          cd /home/ubuntu/projects/DockerProject-bennyi/polybot
-          echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
-          NGROK_DOMAIN=$(curl -s localhost:8443/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo """
-          POLYBOT_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
-          YOLO5_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
-          TELEGRAM_APP_URL=$NGROK_DOMAIN
-          """ > .env
-          docker-compose down
-          docker-compose up -d
-          sleep 10 # Wait for MongoDB containers to be ready
-          ./init-mongo.sh
+      - name: Build and push Polybot image
+        run: |
+          cd polybot
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  Yolo5Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repo code
+        uses: actions/checkout@v2
+
+      - name: List files in workspace
+        run: |
+          echo "Listing files in the workspace:"
+          ls -R
+
+      - name: Log in to DockerHub
+        run: |
+          echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Build and push Yolo5 image
+        run: |
+          cd yolo5
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
+          docker build -t $IMAGE_NAME .
+          docker push $IMAGE_NAME
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+  Deploy:
+    name: Deploy Docker compose project
+    runs-on: ubuntu-latest
+    needs:
+      - PolybotBuild
+      - Yolo5Build
+
+    steps:
+      - name: Checkout the repo code
+        uses: actions/checkout@v2
+
+      - name: List files in workspace
+        run: |
+          echo "Listing files in the workspace:"
+          ls -R
+
+      - name: Copy Docker Compose file to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ env.EC2_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          source: docker-compose.yaml
+          target: /home/ubuntu/projects/DockerProject-bennyi/
+          debug: true
+
+      - name: Copy MongoDB init script to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ env.EC2_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          source: init-mongo.sh
+          target: /home/ubuntu/projects/DockerProject-bennyi/
+          debug: true
+
+      - name: Check copied files on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.EC2_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          script: |
+            ls -l /home/ubuntu/projects/DockerProject-bennyi/
+
+      - name: Update Docker Compose project on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.EC2_PUBLIC_IP }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          script: |
+            sudo apt update && sudo apt install -y jq docker-compose-plugin
+            cd /home/ubuntu/projects/DockerProject-bennyi/polybot
+            echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
+            NGROK_DOMAIN=$(curl -s localhost:8443/api/tunnels | jq -r '.tunnels[0].public_url')
+            echo """
+            POLYBOT_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/polybot:${{ github.run_number }}
+            YOLO5_IMG_NAME=${{ secrets.DOCKERHUB_USERNAME }}/yolo5:${{ github.run_number }}
+            TELEGRAM_APP_URL=$NGROK_DOMAIN
+            """ > .env
+            docker-compose down
+            docker-compose up -d
+            sleep 10 # Wait for MongoDB containers to be ready
+            ./init-mongo.sh
