service-deploy.yaml-commit24

--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -112,7 +112,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           script: |
             sudo apt update && sudo apt install -y jq docker-compose-plugin
-            cd /home/ubuntu/projects/DockerProject-bennyi/polybot
+            cd /home/ubuntu/projects/DockerProject-bennyi/
             echo "${{ secrets.TELEGRAM_BOT_TOKEN }}" > telegram_bot_token.secret
             NGROK_DOMAIN=$(curl -s localhost:8443/api/tunnels | jq -r '.tunnels[0].public_url')
             echo """
@@ -123,4 +123,5 @@ jobs:
             docker-compose down
             docker-compose up -d
             sleep 10 # Wait for MongoDB containers to be ready
+            chmod +x ./init-mongo.sh
             ./init-mongo.sh
