--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
       - mongo3
     networks:
       - mongo-cluster
-
+    entrypoint: ["sh", "-c", "sleep 10 && mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
 
   yolo5:
     build: ./yolo5
