--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,12 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
 
   mongo2:
     image: mongo:latest
@@ -24,6 +30,12 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
 
   mongo3:
     image: mongo:latest
@@ -36,6 +48,12 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
 
   mongo-init-replica:
     image: mongo:latest
@@ -43,10 +61,9 @@ services:
       - mongo1
       - mongo2
       - mongo3
+    entrypoint: ["sh", "-c", "sleep 90 && mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
     networks:
       - mongo-cluster
-    entrypoint: ["sh", "-c", "sleep 30 && mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
-
 
   yolo5:
     build: ./yolo5
