--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -100,6 +100,7 @@ jobs:
             cp /polybot/
             docker-compose down
             docker-compose up -d
+            sleep 90
             chmod +x ./init-mongo.sh
             ./init-mongo.sh
 
