--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
   mongo1:
     image: mongo:latest
     container_name: mongo1
+    labels:
+      - "type=mongo"
     restart: always
     ports:
       - "27017:27017"
@@ -12,10 +14,20 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 300s
+
+
 
   mongo2:
     image: mongo:latest
     container_name: mongo2
+    labels:
+      - "type=mongo"
     restart: always
     ports:
       - "27018:27017"
@@ -24,10 +36,20 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 300s
+
+
 
   mongo3:
     image: mongo:latest
     container_name: mongo3
+    labels:
+      - "type=mongo"
     restart: always
     ports:
       - "27019:27017"
@@ -36,13 +58,23 @@ services:
     command: ["mongod", "--replSet", "rs0"]
     networks:
       - mongo-cluster
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 300s
+
+
 
   mongo-init-replica:
     image: mongo:latest
+    container_name: mongo-init-replica
     depends_on:
       - mongo1
       - mongo2
       - mongo3
+    entrypoint: ["sh", "-c", "mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
     networks:
       - mongo-cluster
 
@@ -80,3 +112,4 @@ volumes:
 
 networks:
   mongo-cluster:
+    driver: bridge
