--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   mongo1:
-    image: mongo:latest
+    image: mongo:7.0.14
     container_name: mongo1
     labels:
       - "type=mongo"
@@ -20,10 +20,10 @@ services:
       interval: 10s
       retries: 5
       start_period: 30s
-      timeout: 300s
+      timeout: 30s
 
   mongo2:
-    image: mongo:latest
+    image: mongo:7.0.14
     container_name: mongo2
     labels:
       - "type=mongo"
@@ -41,10 +41,10 @@ services:
       interval: 10s
       retries: 5
       start_period: 30s
-      timeout: 300s
+      timeout: 30s
 
   mongo3:
-    image: mongo:latest
+    image: mongo:7.0.14
     container_name: mongo3
     labels:
       - "type=mongo"
@@ -62,16 +62,16 @@ services:
       interval: 10s
       retries: 5
       start_period: 30s
-      timeout: 300s
+      timeout: 30s
 
   mongo-init-replica:
-    image: mongo:latest
+    image: mongo:7.0.14
     container_name: mongo-init-replica
     depends_on:
       - mongo1
       - mongo2
       - mongo3
-    entrypoint: ["sh", "-c", "sleep 60 && mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
+    entrypoint: ["sh", "-c", "mongosh --host mongo1:27017 --eval 'rs.initiate({_id:\"rs0\", members:[{_id:0, host:\"mongo1:27017\"}, {_id:1, host:\"mongo2:27018\"}, {_id:2, host:\"mongo3:27019\"}]});'"]
     networks:
       - mongo-cluster
     restart: always
