--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -109,7 +109,13 @@ jobs:
             docker-compose down
             docker-compose up -d
 
-            # Ensure MongoDB initialization script is executable
+            # Ensure MongoDB initialization script is executable and run it
             sleep 10
             chmod +x ./init-mongo.sh
             ./init-mongo.sh
+
+            # Wait for MongoDB to be ready
+            until docker exec mongo1 mongosh --eval "rs.status()" --quiet; do
+              echo "Waiting for MongoDB to be ready..."
+              sleep 5
+            done
