--- a/Dockerfile.mongo
+++ b/Dockerfile.mongo
@@ -1,10 +1,12 @@
-FROM mongo:latest
+FROM mongo:7.0.14
 
-# Install MongoDB shell tools
-RUN apt-get update && \
-    apt-get install -y gnupg && \
-    wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add - && \
-    echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/4.4 main" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list && \
-    apt-get update && \
-    apt-get install -y mongodb-org-shell && \
-    rm -rf /var/lib/apt/lists/*
+# Install legacy mongo shell
+RUN apt-get update && apt-get install -y \
+    wget \
+    && wget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | apt-key add - \
+    && echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/debian stretch/mongodb-org/4.4 main" | tee /etc/apt/sources.list.d/mongodb-org-4.4.list \
+    && apt-get update && apt-get install -y mongodb-org-shell=4.4.18
+
+# Install mongosh
+RUN curl -LO https://downloads.mongodb.com/compass/mongodb-mongosh_1.10.1_amd64.deb \
+    && dpkg -i mongodb-mongosh_1.10.1_amd64.deb
