--- a/.github/workflows/service-deploy.yaml
+++ b/.github/workflows/service-deploy.yaml
@@ -96,7 +96,8 @@ jobs:
             echo "YOLO5_URL=${{ secrets.YOLO5_URL }}" >> .env
 
             # Start ngrok and save its domain in NGROK_DOMAIN
-            ngrok http 8443 --log=stdout > /dev/null &
+            pkill ngrok || true  # Kill any existing ngrok processes
+            ngrok http 8443 --log=stdout > ngrok.log &
             sleep 5  # Wait for ngrok to start
             NGROK_DOMAIN=$(curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url' || echo "http://localhost:8443")
             echo "TELEGRAM_APP_URL=$NGROK_DOMAIN" >> .env
@@ -113,3 +114,7 @@ jobs:
             sleep 10
             chmod +x ./init-mongo.sh
             ./init-mongo.sh
+
+            # Debugging outputs
+            docker ps
+            cat ngrok.log
